--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
       <script src="./js/jquery-2.1.0.min.js"></script>
    </head>
    <body>
-      <div id="radoy" class="info"><button>Lukk</button><br>Her står det masse nyttig informasjon</div>
+      <div id="radoy" class="info"><button class="lukk">Lukk</button><br>Her står det masse nyttig informasjon
+      <button class="neste">neste</button></div>
       <div id="map"></div>
       <script src="script.js">
       </script>
