now with more structure

--- a/index.html
+++ b/index.html
@@ -8,32 +8,9 @@
       <script src="./js/jquery-2.1.0.min.js"></script>
    </head>
    <body>
-      <div class="info"><button class="lukk">Lukk</button><br/>
-        <section id="radoy">
-          <img src="bilder/koffert.webp" alt="" /><h2>Sletta, Radøy</h2>
-          <p>Du har bestemt deg for å forlate heimplassen din, pakkar kista og dreg til Bergen</p>
-      </section>
-      <section id="bergen">
-        <img src="bilder/koffert.webp" alt="" /><h2>Skipshavna i Bergen</h2>
-        <p>Du har no borda båten og er klar for ditt livs eventyr!</p>
-      </section>
-      <section id="havet">
-        <img src="JBFord.png" alt="" /><h2>Midt utpå havet</h2>
-        <p>Havet er stort, større enn du tenkte. Innimellom sjøsjuka får du tid til å tenke på alle du har reist ifrå.</p>
-      </section>
-      <section id="ellis">
-        <img src="bilder/Ellis_Island_in_1905.jpg" alt="" /><h2>Ellis Island</h2>
-        <p>Styrbord ser du no øya som du har drømd om, men samtidig frykta</p>
-      </section>
-      </div>
+      <article><button class="lukk">Lukk</button><br/>
+      </article>
       <nav>
-        <button id="forrige"><--</button>
-        <button id="1">Dag 1</button>
-        <button id="2">Dag 2</button>
-        <button id="3">Dag 10</button>
-        <button id="4">Dag 50</button>
-        <button id="5">Dag 100</button>
-        <button id="neste">--></button>
       </nav>
       <div id="map"></div>
       <script src="script.js">
