--- a/index.html
+++ b/index.html
@@ -1,19 +1,21 @@
 <html>
-   <head>
-      <title>Title</title>
-      <meta charset="utf-8" />
-      <link rel="stylesheet" type="text/css" href="style.css"/>
-      <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet/v0.7.7/leaflet.css" />
-      <script src="http://cdn.leafletjs.com/leaflet/v0.7.7/leaflet.js"></script>
-      <script src="./js/jquery-2.1.0.min.js"></script>
-   </head>
-   <body>
-      <article><button class="lukk">Lukk</button><br/>
-      </article>
-      <nav>
-      </nav>
-      <div id="map"></div>
-      <script src="script.js">
-      </script>
-   </body>
+<head>
+  <title>Title</title>
+  <meta charset="utf-8" />
+  <link rel="stylesheet" type="text/css" href="style.css"/>
+  <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet/v0.7.7/leaflet.css" />
+  <script src="http://cdn.leafletjs.com/leaflet/v0.7.7/leaflet.js"></script>
+  <script src="./js/jquery-2.1.0.min.js"></script>
+</head>
+<body>
+  <article><button class="lukk">Lukk</button><br/>
+  </article>
+  <nav>
+    <button id="forrige">◀</button>
+    <button id="neste">▶</button>
+  </nav>
+  <div id="map"></div>
+  <script src="script.js">
+  </script>
+</body>
 </html>
