--- a/Parallax-del/parallaxhtml.html
+++ b/Parallax-del/parallaxhtml.html
@@ -36,7 +36,9 @@
 
 <div id="slide4" class="slide header">
     <h1>Og slik startet reisen din.</h1>
-    <h2 id="fortsett"><a href="/kartlinje.html">Fortsett reisen din mot Amerika.</a></h2>
+    <a href="../kartlinje/index.html">
+        <h2 id="fortsett">Fortsett reisen din mot Amerika.</h2>
+    </a>
 </div>
 </body>
 </html>
