--- a/kartlinje/index.html
+++ b/kartlinje/index.html
@@ -10,20 +10,17 @@
 <body>
   <video id="bgvid" playbackRate= "-1"><source src="./episoder/media/video.mp4" type="video/mp4"></video>
     <img src="./episoder/media/lastFrame.png" alt="" id="map_lastFrame" />
-    <audio id="#" src="">
-
-    </audio>
+    <audio id="#" src=""></audio>
   <section id="navContainer">
   <nav>
     <button id="forrige">◀ Tilbake</button>
     <img id="miniLogo" src="./bilder/muho-meny.png" height="35px" width="35px">
-      <section id="pop-up">
-        <ul>
-            <li><a href="http://muho.no">Muho</a></li>
-            <li><a href="http://muho.no">Muho</a></li>
-        </ul>
-      </section>
-    <button id="neste">Fram ▶</button>
+    <button id="neste">   Fram ▶</button>
+    <section id="pop-up">
+      <ul>
+        <li>Heim</li>
+      </ul>
+    </section>
   </nav>
   </section>
   <script src="script.js"></script>
