--- a/kartlinje/episoder/bryggen.html
+++ b/kartlinje/episoder/bryggen.html
@@ -33,11 +33,16 @@ $("#baatOmraade, #kontorOmraade").mouseout(function() {
   width: 1000px;
   height: auto;
   position: relative;
+  padding: 0;
+  margin: 0;
+  margin-left: auto;
+  margin-right: auto;
 }
 .container img{
-    position: relative;
-    width: 100%;
-    height: auto;
+  position: relative;
+  width: 100%;
+  height: auto;
+  margin: 0;
 }
 .hidden{
   display: none;
