--- a/kartlinje/episoder/bryggen.html
+++ b/kartlinje/episoder/bryggen.html
@@ -1,6 +1,6 @@
 <section class="fullScreen">
   <div class="container">
-    <img id="bildet" src="/episoder/media/Bryggen/BryggenBlank.png" alt="" />
+    <img id="bildet" src="./episoder/media/Bryggen/BryggenBlank.png" alt="" />
     <div id="baatOmraade"></div>
 	  <div id="kontorOmraade"></div>
     <div id="flaggOmraade"></div>
@@ -20,19 +20,19 @@ $("#lukk").click(function() {
   $("#tekst").hide();
 });
 $("#baatOmraade").mouseover(function() {
-  $("#bildet").attr("src", "/episoder/media/Bryggen/BryggenBaat.png");
+  $("#bildet").attr("src", "./episoder/media/Bryggen/BryggenBaat.png");
 });
 $("#kontorOmraade").mouseover(function() {
-  $("#bildet").attr("src", "/episoder/media/Bryggen/BryggenBygning.png");
+  $("#bildet").attr("src", "./episoder/media/Bryggen/BryggenBygning.png");
 });
 $("#flaggOmraade").mouseover(function() {
-  $("#bildet").attr("src", "/episoder/media/Bryggen/BryggenFlagg.png");
+  $("#bildet").attr("src", "./episoder/media/Bryggen/BryggenFlagg.png");
 });
 $("#barnOmraade").mouseover(function() {
-  $("#bildet").attr("src", "/episoder/media/Bryggen/BryggenBarn.png");
+  $("#bildet").attr("src", "./episoder/media/Bryggen/BryggenBarn.png");
 });
 $("#baatOmraade, #kontorOmraade, #flaggOmraade, #barnOmraade").mouseout(function() {
-  $("#bildet").attr("src", "/episoder/media/Bryggen/BryggenBlank.png");
+  $("#bildet").attr("src", "./episoder/media/Bryggen/BryggenBlank.png");
 });
 
 </script>
