--- a/kartlinje/index.html
+++ b/kartlinje/index.html
@@ -8,9 +8,12 @@
   <script type="text/javascript" src="js/fancybox/source/jquery.fancybox.pack.js"></script>
 </head>
 <body>
-  <video id="bgvid" playbackRate= "-1"><source src="./episoder/media/video.mp4" type="video/mp4"></video>
-    <img src="./episoder/media/lastFrame.png" alt="" id="map_lastFrame" />
-    <audio id="#" src=""></audio>
+  <video id="hordaland" class="bgvid" playbackRate= "-1"><source src="./episoder/media/video/hordaland.mp4"></video>
+  <video id="atlantic1" class="bgvid hidden" playbackRate= "-1"><source src="./episoder/media/video/atlantic1.mp4"></video>
+  <video id="atlantic2" class="bgvid hidden" playbackRate= "-1"><source src="./episoder/media/video/atlantic2.mp4"></video>
+  <video id="usa" class="bgvid hidden" playbackRate= "-1"><source src="./episoder/media/video/usa.mp4"></video>
+  <img src="./episoder/media/bakgrunn/hordaland_lastframe.png" alt="" id="map_lastFrame" />
+  <audio id="#" src=""></audio>
   <section id="navContainer">
   <nav>
     <button id="forrige">◀ Tilbake</button>
