--- a/kartlinje/episoder/ankomst.html
+++ b/kartlinje/episoder/ankomst.html
@@ -3,4 +3,7 @@
       <h1>New York, New York</h1>
   </header>
   <a href="./episoder/media/new york.jpg" class="fancybox"><img src="./episoder/media/new york.jpg" alt="" /></a>
+  <p>
+    Det var ikkje mykje ro natta før ankomsten i New York. Den neste morgonen var det på tide å sette bein på ukjent grunn. Men her blir du ikkje lenge. Neste stasjon er Ellis Island, der du må gjennom fleire kontrollar før du kan starte på neste etappe. I køen foran deg står det eit par kvinnfolk og pratar høglydt.
+  </p>
 </section>
