--- a/kartlinje/episoder/bergen.html
+++ b/kartlinje/episoder/bergen.html
@@ -1,5 +1,11 @@
 <header><h1>Bergen</h1></header>
 <section>
-  <img src="./bilder/koffert.webp" alt="" />
-  <p>Her står det litt om Bergen</p>
+  <a href="./episoder/media/bergen.jpg" class="fancybox"><img src="./episoder/media/bergen.jpg" alt="" /></a>
+  <p>Du kjem til Bergen etter ein lang dags reise. Du har brev frå lensmannen i handa om at du har betalt skatt, og ikkje har nokon fleire forpliktningar til heimstaden din. I den andre handa har du ei avisreklame frå den norske Amerikalinje. </p>
+
+  <p>Du er no på veg til eit av kontora deira for å bestille reise. Hos agenten må du gjennom du ein helsekontroll, før du signerer kontrakten. Dei lar jo ikkje kven som helst reise over havet!</p>
+
+  <p>Det er endå nokon dagar før båten legg frå land, så du lyt finne deg ein stad å bu. Du tar inn på eit ledig rom ikkje langt frå brygga. Dei neste dagane bruker du til å forberede deg til reisa.</p>
+
+</p>
 </section>
