--- a/kartlinje/episoder/dakota.html
+++ b/kartlinje/episoder/dakota.html
@@ -3,4 +3,7 @@
 </header>
 <section>
   <a href="./episoder/media/sjo.jpg" class="fancybox"><img src="./episoder/media/sjo.jpg" alt="" /></a>
+  <p>
+    Dei fyrste dagane etter ankomst til din nye heim blei brukt til å pakke ut og møte familien. Nye menneske var det òg å finne her, og det tok ikkje lang tid å bli kjent med dei, då dei var veldig imøtekommande og glade for å få eit ekstra par hjelpande hender på garden. Det som forbausa deg mest var mengda menneske frå Sletta her på garden. Du visste at fleire hadde gått gjennom same reise som du, men at så mange endte opp på same stad var ei hyggeleg overrasking. Etter den første perioden med høflegheitar og “settling in” som Amerikanarane ville sagt, bar det ut på garden for fyrste arbeidsdag.
+  </p>
 </section>
