--- a/kartlinje/episoder/ellisisland.html
+++ b/kartlinje/episoder/ellisisland.html
@@ -1,11 +1,29 @@
 <header>
-    <h1>End of the Line</h1>
+    <h1>Ellis Island</h1>
 </header>
 <section>
-  <a class="fancybox-thumb" rel="fancybox-thumb" href="episoder/media/ellis/barges.jpg" title="Båtane som frakta emigrantane frå og til Ellis Island">
-	<img src="episoder/media/ellis/barges.jpg" alt="test" />
-  </a>
-  <a class="fancybox-thumb" rel="fancybox-thumb" href="episoder/media/ellis/Ellis_Island.jpg" title="Ellis Island">
-  	<img src="episoder/media/ellis/Ellis_Island.jpg" alt="" />
-  </a>
+  <div>
+    <a class="fancybox-thumb" rel="fancybox-thumb" href="episoder/media/ellis/barges.jpg" title="Båtane som frakta emigrantane frå og til Ellis Island">
+  	<img src="episoder/media/ellis/barges.jpg" alt="test" />
+    </a>
+    <p>Klikk på biletet for å oppleve Ellis Island!</p>
+    <a class="hidden fancybox-thumb" rel="fancybox-thumb" href="episoder/media/ellis/Ellis_Island.jpg" title="Ellis Island">
+    	<img src="episoder/media/ellis/Ellis_Island.jpg" alt="" />
+    </a>
+  </div>
+  <br />
+  <div>
+    <a class="hidden fancybox-thumb" rel="fancybox-thumb" href="episoder/media/ellis/kontroll1.png" title="Køen var lang">
+    	<img src="episoder/media/ellis/kontroll1.png" alt="" />
+    </a>
+    <a class="hidden fancybox-thumb" rel="fancybox-thumb" href="episoder/media/ellis/kontroll2.png" title="men med litt tolmodigheit">
+    	<img src="episoder/media/ellis/kontroll2.png" alt="" />
+    </a>
+    <a class="hidden fancybox-thumb" rel="fancybox-thumb" href="episoder/media/ellis/kontroll3.png" title="kom du deg gjennom">
+    	<img src="episoder/media/ellis/kontroll3.png" alt="" />
+    </a>
+    <a class="hidden fancybox-thumb" rel="fancybox-thumb" href="episoder/media/ellis/utover.jpg" title="Så var det berre å vente på båten tilbake igjen">
+    	<img src="episoder/media/ellis/utover.jpg" alt="" />
+    </a>
+  </div>
 </section>
