--- a/kartlinje/episoder/havet.html
+++ b/kartlinje/episoder/havet.html
@@ -2,10 +2,12 @@
     <h1>Havet</h1>
 </header>
 <section>
-  <a href="./episoder/media/sjo.jpg" class="fancybox"><img src="./episoder/media/sjo.jpg" alt="" /></a>
+  <a href="./episoder/media/baatpaahavet.png" class="fancybox"><img src="./episoder/media/baatpaahavet.png" alt="" /></a>
   <p>Etter eit par dagar på havet har du vorte komfortabel i lugaren. Det er nesten litt avslappande med duren frå motorane, og lyden av bølgene som slår mot skroget. Men ein kan ikkje sitte i lugaren heile dagen, så du går ut på dekk for å få litt frisk luft.</p>
 
-  <p>Den kalde sjølufta og det blå havet gir deg ei kjensle av fridom du sårt mangla i lugaren. Med så mange om bord er du overraska over at du faktisk har møtt noen gamle kjenningar. Etter ei lita stund i for deg sjølv ser du *person(er) å linke til* . Du vinker høflig når de/dykk får augnekontakt, og etter ei lita stund får de/han/hun presset seg gjennom mengden og frem til deg. Stakkars *person*. Havet har aldri vore han si/hennar si/deira beste venn. </p>
+  <p>Den kalde sjølufta og det blå havet gir deg ei kjensle av fridom du sårt mangla i lugaren. Med så mange om bord er du overraska over at du faktisk har møtt nokon gamle kjenningar. Etter ei lita stund i for deg sjølv ser du Henrikka Hansdotter . Du vinker høflig når dykk får augnekontakt, og etter ei lita stund får hun presset seg gjennom mengden og frem til deg. Stakkars Henrikka. Havet har aldri vore han hennar si beste venn.
+  </p>
 
-  <p>Allerede fyrste dag til sjøs hadde han/ho/dei vorte sjøsjuk, og orka ikkje forlate lugaren før i dag morgon. Utanom denne sjukdomsrapporten, så vart det ein veldig hyggelig samtale. Ein slags siste helsing med fortida før du grip fatt i framtida som ligg framfor deg. Over sjøbruset og samtalane som pågår på dekk høyrer du matklokka ringe. Matservering var heldigvis inkludert i reisa, ellers ville du ikkje hatt plass til mykje anna i bagasjen. Sakte, men sikkert, nærmer du deg byssa, spent på dagens middag.</p>
+  <p>Allerede fyrste dag til sjøs hadde ho vorte sjøsjuk, og orka ikkje forlate lugaren før i dag morgon. Utanom denne sjukdomsrapporten, så vart det ein veldig hyggelig samtale. Ein slags siste helsing med fortida før du grip fatt i framtida som ligg framfor deg. Over sjøbruset og samtalane som pågår på dekk høyrer du matklokka ringe. Matservering var heldigvis inkludert i reisa, ellers ville du ikkje hatt plass til mykje anna i bagasjen. Sakte, men sikkert, nærmer du deg byssa, spent på dagens middag, du vonar den inneheld poteter.
+  </p>
 </section>
