--- a/kartlinje/episoder/sletta.html
+++ b/kartlinje/episoder/sletta.html
@@ -3,9 +3,9 @@
 </header>
 <section>
   <a href="./bilder/koffert.webp" class="fancybox"><img src="./bilder/koffert.webp" alt="" /></a>
-  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-    
-<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>  
+  <p>
+    Det har tatt ei lang tid for deg å bestemme kva du skal ta med deg på reisa til den nye verda. Samtidig som du leiter gjennom eigendelane dine, høyrer du nokon gå rundt i etasjen ovanfor. Det er nok foreldra dine som gjer seg klar til å verte med til Bergen for å sei farvel. Du høyrer etter stegene i nokon sekund til, og legg merke til den milde lyden av vinden gjennom vindu og dører. </p>
 
-<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>  
+    <p>Allereie startar du å kjenne savnet av desse små trekka som gjer heimen din så særeigen. Men du har gjort eit valg, og du er klar for å leggje ut på ei reise ulikt noko anna du nokon gong har opplevd.
+  </p>
 </section>
