--- a/kartlinje/index.html
+++ b/kartlinje/index.html
@@ -3,9 +3,14 @@
   <title>Title</title>
   <meta charset="utf-8" />
   <link rel="stylesheet" type="text/css" href="style.css"/>
+  <link href='https://fonts.googleapis.com/css?family=Raleway' rel='stylesheet' type='text/css'>
+  <link href='https://fonts.googleapis.com/css?family=Lora' rel='stylesheet' type='text/css'>
   <script src="js/jquery-2.1.0.min.js"></script>
   <link rel="stylesheet" href="js/fancybox/source/jquery.fancybox.css" type="text/css" media="screen" />
   <script type="text/javascript" src="js/fancybox/source/jquery.fancybox.pack.js"></script>
+  <script type="text/javascript">var switchTo5x=true;</script>
+  <script type="text/javascript" src="https://ws.sharethis.com/button/buttons.js"></script>
+  <script type="text/javascript">stLight.options({publisher: "9e77e7a5-af58-42a2-ab0f-91747e373375", doNotHash: false, doNotCopy: false, hashAddressBar: true});</script>
 </head>
 <body>
   <video id="hordaland" class="bgvid" playbackRate= "-1"><source src="./episoder/media/video/hordaland.mp4"></video>
