--- a/kartlinje/index.html
+++ b/kartlinje/index.html
@@ -26,7 +26,7 @@
     <button id="neste">   Fram ▶</button>
     <section id="pop-up">
       <ul>
-        <li>Heim</li>
+        <li>Heim til samlinga</li>
       </ul>
     </section>
   </nav>
