--- a/kartlinje/episoder/theend.html
+++ b/kartlinje/episoder/theend.html
@@ -1,4 +1,4 @@
-<section>
+<section id="slutten">
   <h2>The End</h2>
   <p>Viss du likte denne opplevelsen, del den gjerne!</p>
   <span class='st_facebook_large' displayText='Facebook'></span>
@@ -8,3 +8,10 @@
   <span class='st_pinterest_large' displayText='Pinterest'></span>
   <span class='st_email_large' displayText='Email'></span>
 </section>
+<style>
+  article#theend{
+    background-color: black;
+    color: white;
+    width: 100%;
+  }
+</style>
