--- a/kartlinje/index.html
+++ b/kartlinje/index.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" type="text/css" href="style.css"/>
   <link href='https://fonts.googleapis.com/css?family=Raleway' rel='stylesheet' type='text/css'>
   <link href='https://fonts.googleapis.com/css?family=Lora' rel='stylesheet' type='text/css'>
-  <script src="/js/jquery/jquery-2.1.0.min.js"></script>
+  <script src="./js/jquery-2.1.0.min.js"></script>
   <link rel="stylesheet" href="js/fancybox/source/jquery.fancybox.css" type="text/css" media="screen" />
   <script type="text/javascript" src="js/fancybox/source/jquery.fancybox.pack.js"></script>
   <script type="text/javascript">var switchTo5x=true;</script>
