Tooltip og sluttekst
^

--- a/kartlinje/episoder/bryggen.html
+++ b/kartlinje/episoder/bryggen.html
@@ -20,6 +20,7 @@
 </p></div>
   <div class="tekst" id="barnTekst"><button class="lukk">Lukk</button><h2>Guttegjeng</h2><p>Tre unge gutar står på kaia og stirrer på alle menneska som går forbi. Kanskje venter dei på at foreldra skal komme tilbake frå kontoret til Den Norske Amerikalinje? Eller kanskje dei er pøblar som venter på eit enkelt offer?
 </p></div>
+	  <div class="tooltip"><p>Utforsk bryggja!</p></div>
     </div>
 </section>
 <script>
@@ -142,4 +143,15 @@ $("#baatOmraade, #kontorOmraade, #flaggOmraade, #barnOmraade").mouseout(function
   width: 50%;
   padding: 1em;
 }
+
+.tooltip{
+	display:inline-block;
+	position:absolute;
+	width:71%;
+	padding:10px;
+	top:525;
+	left: 13.5%;
+	background-color: rgba(255, 255, 255, 0.75);
+}
+	
 </style>
