--- a/kartlinje/episoder/theend.html
+++ b/kartlinje/episoder/theend.html
@@ -1,6 +1,7 @@
 <section id="slutten">
-  <h2>The End</h2>
-  <p>Viss du likte denne opplevelsen, del den gjerne!</p>
+  <h2>Slik enda reisa frå Nordhordland til Bottineau</h2>
+  <p class="sluttTekst">Vi vonar du fann reisa underhaldande og lærerik. Viss du likte denne opplevinga og ynskjer at andre skal ta del i emmigransjonshistoria i Nordhordland, del gjerne sida på sosiale medium!</p>
+	<p class="sluttTekst"> Om du er interessert i å finne ut meir om forfedrane dine og om du har slektningar i USA, klikk deg vidare til <a href="http://digitalarkivet.arkivverket.no/sok/person_avansert">Digitalarkivets heimsider</a> og utforsk familien din sin historie.</p>
   <span class='st_facebook_large' displayText='Facebook'></span>
   <span class='st_twitter_large' displayText='Tweet'></span>
   <span class='st_googleplus_large' displayText='Google +'></span>
@@ -14,4 +15,18 @@
     color: white;
     width: 100%;
   }
+	
+	.sluttTekst{
+		width:50%;
+	}
+	
+	.sluttTekst a{
+		text-decoration: none;
+		color: #bdcfff;
+	}
+	
+	.sluttTekst a:hover{
+		color:#dde6ff;
+	}
+	
 </style>
